--- a/services.html
+++ b/services.html
@@ -64,12 +64,12 @@
 
   </ul>
 </div>
-<div>
-    <img src="Screenshot 2025-10-02 045409.png" alt="" style="width: 90%; height: 80%;">
-  </div>
+
 </section>
 
- 
+<div>
+    <img src="Screenshot 2025-10-02 045409.png" alt="" style="width: 80%; height: 70%;">
+  </div> 
 
 <!-- Footer -->
 <footer class="footer">
@@ -91,10 +91,10 @@
       Email : <br>
     </div>
     <div class="footer-col"><h3>Get in Touch</h3>
-      <p>Quickfix Plumbers</p><p>Ring Road, Parklands, Nairobi, Kenya</p>
+      <p>Prisc Consult Designs</p><p>Ring Road, Parklands, Nairobi, Kenya</p>
     </div>
   </div>
-  <div class="footer-bottom"><p>© 2025 QuickFix Plumbers | All Rights Reserved</p></div>
+  <div class="footer-bottom"><p>© 2025 Consult Designs | All Rights Reserved</p></div>
 </footer>
 
 </body>
