--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <a href="contact.html" class="btn">Get a Free Quote</a>
     </div>
     <div class="owner">
-      <img src="Screenshot 2025-10-02 042641.png" alt="" style="border-radius: 50px; width: 400px; height: 500px;">
+      <img src="Screenshot 2025-10-02 042641.png" alt="" style="border-radius: 50px; width: 40%; height: 50%;">
     </div>
     </div>
   </section>
